--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -10,6 +10,7 @@ $medium-screen-size: 768px;
 
 $color-correct-light: #edfff0;
 $color-correct-dark: #6ea776;
+$color-correct-text: #4d7a53;
 $color-wrong-light: #ffe6e3;
 $color-wrong-dark: #d33120;
 $color-show-correct-dark: #1a73d9;
